# wiki-llm-sample

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
raw/: Module_1_LinearModels_ScikitLearn.ipynb  Module_1_Linear_Models_Pytorch.ipynb  README.md  app.py  pytorch_in_one_hour.ipynb
tests/: test_embeddings.py  test_graph.py  test_lint_and_search.py  test_markdown.py
wiki/: index.md  log.md
wiki/.obsidian/: graph.json  workspace.json
wiki/concepts/: analytical-engine.md  cnn-applications.md  cnn-architectures-and-training.md  convolutional-neural-networks.md  data-preprocessing-for-neural-networks.md  descriptive-statistics.md  gradient-descent-and-optimization.md  linear-algebra-foundations.md  linear-models-as-neural-network-layers.md  loss-functions.md  model-evaluation-metrics.md  probability-fundamentals.md  pytorch-fundamentals.md  recurrent-neural-networks-and-sequence-modeling.md  regularization.md  scikit-learn-implementation-of-linear-models.md  vector-calculus-for-machine-learning.md
wiki/entities/: ada-lovelace.md  rina-buoy.md  sebastian-raschka.md
wiki/sources/: module-1-deep-models-cnn-to-rnn.md  module-1-linear-models-pytorch.md  module-1-linear-models-scikit-learn.md  module-1-linear-models.md  module-1-the-basics.md  note-g.md  pytorch-in-one-hour.md
wikillm/: cli.py  config.py  embeddings.py  graph.py  lint.py  markdown.py  search.py
