[project]
name = "wikillm"
version = "0.1.0"
description = "LLM-maintained markdown wiki"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
vector = ["fastembed>=0.3"]

[project.scripts]
wikillm = "wikillm.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wikillm"]
